# codelock

./: .gitignore  README.md  pyproject.toml
codelock/: cli.py  config.py  crypto.py
