[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codelock"
version = "1.0.0"
description = "Inline secret encryption for codebases"
authors = [{ name = "soe1hom-arch" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["cryptography>=41"]
scripts = { codelock = "codelock.cli:main" }

[tool.setuptools.packages.find]
include = ["codelock*"]
